--- a/package.json
+++ b/package.json
@@ -15,8 +15,7 @@
     "mapbox-gl": "^3.13.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-map-gl": "^8.0.4",
-    "react-simple-maps": "^3.0.0"
+    "react-map-gl": "^7.1.9"
   },
   "devDependencies": {
     "@eslint/js": "^9.29.0",
