--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@aws-amplify/auth": "^6.14.0",
+    "@aws-amplify/core": "^6.13.0",
+    "aws-sdk": "^2.1692.0",
     "dotenv": "^17.2.0",
     "framer-motion": "^12.23.0",
     "mapbox-gl": "^3.13.0",
