--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "@aws-amplify/auth": "^6.14.0",
     "@aws-amplify/core": "^6.13.0",
+    "@aws-amplify/ui-react": "^6.11.2",
+    "aws-amplify": "^6.15.4",
     "aws-sdk": "^2.1692.0",
     "dotenv": "^17.2.0",
     "framer-motion": "^12.23.0",
