--- a/package.json
+++ b/package.json
@@ -13,11 +13,12 @@
     "@aws-amplify/auth": "^6.14.0",
     "@aws-amplify/core": "^6.13.0",
     "@aws-amplify/ui-react": "^6.11.2",
+    "@react-google-maps/api": "^2.20.7",
     "aws-amplify": "^6.15.4",
     "aws-sdk": "^2.1692.0",
     "dotenv": "^17.2.0",
     "framer-motion": "^12.23.0",
-    "mapbox-gl": "^3.13.0",
+    "mapbox-gl": "^3.14.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-map-gl": "^7.1.9",
