--- a/package.json
+++ b/package.json
@@ -13,17 +13,28 @@
     "@aws-amplify/auth": "^6.14.0",
     "@aws-amplify/core": "^6.13.0",
     "@aws-amplify/ui-react": "^6.11.2",
+    "@radix-ui/react-label": "^2.1.7",
+    "@radix-ui/react-slot": "^1.2.3",
+    "@radix-ui/react-tabs": "^1.1.13",
     "@react-google-maps/api": "^2.20.7",
+    "@tailwindcss/vite": "^4.1.12",
     "aws-amplify": "^6.15.4",
     "aws-sdk": "^2.1692.0",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "dotenv": "^17.2.0",
     "framer-motion": "^12.23.0",
+    "lucide-react": "^0.539.0",
     "mapbox-gl": "^3.14.0",
+    "next-themes": "^0.4.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-map-gl": "^7.1.9",
     "react-router-dom": "^7.7.1",
-    "react-simple-maps": "^3.0.0"
+    "react-simple-maps": "^3.0.0",
+    "sonner": "^2.0.7",
+    "tailwind-merge": "^3.3.1",
+    "tailwindcss": "^4.1.12"
   },
   "devDependencies": {
     "@eslint/js": "^9.29.0",
@@ -34,6 +45,7 @@
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
     "globals": "^16.2.0",
+    "tw-animate-css": "^1.3.6",
     "vite": "^7.0.0"
   }
 }
