--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "mapbox-gl": "^3.14.0",
     "next-themes": "^0.4.6",
     "react": "^18.2.0",
+    "react-confetti": "^6.4.0",
     "react-dom": "^18.2.0",
     "react-map-gl": "^7.1.9",
     "react-router-dom": "^7.7.1",
