--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-confetti": "^6.4.0",
     "react-dom": "^18.2.0",
     "react-map-gl": "^7.1.9",
+    "react-markdown": "^10.1.0",
     "react-router-dom": "^7.7.1",
     "react-simple-maps": "^3.0.0",
     "recharts": "^3.1.2",
