--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "lucide-react": "^0.539.0",
     "mapbox-gl": "^3.14.0",
     "next-themes": "^0.4.6",
+    "nodemailer": "^7.0.5",
     "react": "^18.2.0",
     "react-confetti": "^6.4.0",
     "react-dom": "^18.2.0",
